--- a/cliente.html
+++ b/cliente.html
@@ -81,7 +81,7 @@
 
         <div>
             <label for="telefono">Teléfono:</label>
-            <input type="tel" id="telefono" required>
+            <input type="tel" id="telefono" maxlength="10" required>
         </div>
 
         <div>
@@ -121,13 +121,31 @@
     formulario.addEventListener('submit', function(event) {
         event.preventDefault();
 
-        const cedula = document.getElementById('cedula').value;
-        const nombre = document.getElementById('nombre').value;
-        const correo = document.getElementById('correo').value;
-        const telefono = document.getElementById('telefono').value;
-        const direccion = document.getElementById('direccion').value;
+        const cedula = document.getElementById('cedula').value.trim();
+        const nombre = document.getElementById('nombre').value.trim();
+        const correo = document.getElementById('correo').value.trim();
+        const telefono = document.getElementById('telefono').value.trim();
+        const direccion = document.getElementById('direccion').value.trim();
         const fecha = document.getElementById('fecha').value;
         const tipo = document.getElementById('tipo').value;
+
+        const soloLetras = /^[a-zA-ZáéíóúÁÉÍÓÚñÑ\s]+$/;
+        const soloNumeros = /^\d+$/;
+
+        if (!soloNumeros.test(cedula) || cedula.length !== 10) {
+            alert("La cédula debe contener solo números y tener exactamente 10 dígitos.");
+            return;
+        }
+
+        if (!soloLetras.test(nombre)) {
+            alert("El nombre solo debe contener letras y espacios.");
+            return;
+        }
+
+        if (!soloNumeros.test(telefono) || telefono.length !== 10) {
+            alert("El teléfono debe contener solo números y tener exactamente 10 dígitos.");
+            return;
+        }
 
         resultado.innerHTML = `
             <h3>Cliente registrado correctamente</h3>
